--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,11 @@ dependencies {
     implementation 'junit:junit:4.12'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+    // https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+    // https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+
 
 }
 
