ADDED user services Classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8081
+
+#Local MongoDB config
+spring.data.mongodb.database=UserInfo
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
