ADDED authentication and register v0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,18 @@
 server.port=8081
 
-#Local MongoDB config
-spring.data.mongodb.database=UserInfo
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+# ============================== #
+#           DATABASE             #
+# ============================== #
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/UserInfo
+spring.datasource.username=root
+spring.datasource.password=root
+
+# ============================== #
+#        JPA / HIBERNATE		 #
+# ============================== #
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
