--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,25 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
+
+#================================#
+#        Email Send   #
+#================================#
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${emailID}
+spring.mail.password=${password}
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+#=============================#
+#           REDIS             #
+#=============================#
+
+spring.redis.port=6379
+#spring.redis.password=password
+spring.redis.host=localhost
