--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ dependencies {
 
 // https://mvnrepository.com/artifact/com.auth0/java-jwt
     compile group: 'com.auth0', name: 'java-jwt', version: '3.8.3'
+    //*****************Spring Boot MongoDB*******************************//
+    compile 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
 }
 
