--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/UserInfo
 spring.datasource.username=root
 spring.datasource.password=root
 
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=KYCUser
 # ============================== #
 #        JPA / HIBERNATE		 #
 # ============================== #
@@ -16,6 +20,9 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
+
+
+
 
 #================================#
 #        Email Send   #
