ADDED rabbit MQ configuration methods.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/UserInfo
 spring.datasource.username=root
 spring.datasource.password=root
 
-
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=KYCUser
 # ============================== #
 #        JPA / HIBERNATE		 #
 # ============================== #
@@ -45,3 +41,15 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.redis.port=6379
 #spring.redis.password=password
 spring.redis.host=localhost
+
+#=============================#
+#   Rabbit Mq Configuration   #
+#=============================#
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+directrice.rabbitmq.exchange=directrice.exchange
+directrice.rabbitmq.queue=directrice.queue
+directrice.rabbitmq.routingkey=directrice.routingkey
