--- a/build.gradle
+++ b/build.gradle
@@ -35,18 +35,18 @@ dependencies {
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     // https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
-
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.2.4.RELEASE'
-// https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.18'
-
-// https://mvnrepository.com/artifact/com.auth0/java-jwt
+    // https://mvnrepository.com/artifact/com.auth0/java-jwt
     compile group: 'com.auth0', name: 'java-jwt', version: '3.8.3'
     //*****************Spring Boot MongoDB*******************************//
     compile 'org.springframework.boot:spring-boot-starter-data-mongodb'
-// https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
+    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
     compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.3.1.RELEASE'
+     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-amqp
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-amqp', version: '2.2.1.RELEASE'
 
 }
 
